--- a/semillero.html
+++ b/semillero.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -41,7 +40,7 @@
           <span class="sidebar__text">Servicios</span>
           <ul class="sidebar__submenu">
             <li class="submenu__item">
-              <a href="semillero.html" class="submenu__link" >
+              <a class="submenu__link" href="semillero.html">
                 <span class="submenu__text">Semillero de Negocios</span>
               </a>
             </li>
@@ -95,14 +94,7 @@
         <i class='bx bx-menu bar__icono-left'></i>
       </a>
     </div>
-    <!-- Contenido derecha -->
-    <div class="navbar__container navbar__container-right">
-      <ul class="navbar__ul">
-        <li class="navbar__li">
-          <a class="navbar__link">
-            <i id="theme-enabled" class='bx bx-brightness-half bar__icono'></i>
-            <span class="navbar__texto">Tema</span>
-          </a>
+   
           <!-- Menú desplegable -->
           <div id="navbar__theme-switcher" class="navbar__desplegable navbar__desplegable-disabled">
             <a class="navbar__desplegable__link navbar__theme-enabled">
@@ -121,7 +113,7 @@
         </li>
       </ul>
       <!-- Botón probar -->
-      <a class="button button-highlighted">Probar</a>
+      
     </div>
   </nav>
   <!-- Contenido de la página -->
@@ -306,14 +298,7 @@ La gestión del agua es otro aspecto crucial de nuestro compromiso con la sosten
           <img class="footer__image" src="assets/img/tsi_horizontal.png" />
         </a>
       </div>
-      <!-- No quites esto  -->
-      <hr class="footer__line" />
-      <p class="info">Creada por Alberto Nieto Rocha, inspirada en <a
-          href="https://themes.3rdwavemedia.com/bootstrap-templates/product/coderdocs-free-bootstrap-5-documentation-template-for-software-projects/"
-          target="_blank">CoderDocs</a> y <a href="https://bootstrapmade.com/demo/iPortfolio/"
-          target="_blank">iPortfolio</a>.
-      </p>
-    </div>
+     
   </footer>
   <!-- Scripts -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
