--- a/red-comercial.html
+++ b/red-comercial.html
@@ -235,7 +235,7 @@
     </section>
     <!-- Sección descargas -->
     <section id="downloads">
-      <h2 class="title">Descargas</h2>
+      <h2 class="title">Recursos Educativos</h2>
       <p>En esta sección se encuentran los documentos producidos durante el proyecto.</p>
       <table class="table__downloads">
         <tr>
