--- a/red-comercial.html
+++ b/red-comercial.html
@@ -152,58 +152,58 @@
       </p>
 
       <h3>Funcionamiento de una Red Comercial Local</h3>
-      <p>Estructura y Organización
+      <p>Estructura y Organización<br>
         Constitución y Miembros:<br> Las redes comerciales locales se constituyen mediante la asociación de varias
         empresas y pueden formalizarse como asociaciones, cooperativas, o simplemente alianzas informales. Los miembros
-        suelen ser negocios que ven el valor en colaborar para atraer más clientes y mejorar sus operaciones.
+        suelen ser negocios que ven el valor en colaborar para atraer más clientes y mejorar sus operaciones.<br>
 
         Gobernanza y Coordinación:<br> La red puede tener un comité directivo o una junta que se encarga de la toma de
         decisiones y la coordinación de actividades. Este órgano es responsable de la planificación estratégica, la
-        organización de eventos y campañas, y la gestión de los recursos comunes.
+        organización de eventos y campañas, y la gestión de los recursos comunes.<br>
 
         Financiación:<br> La financiación de la red comercial puede provenir de cuotas de membresía, subvenciones
         públicas, patrocinadores privados, o una combinación de estos. Los fondos recaudados se utilizan para financiar
-        actividades promocionales, eventos comunitarios, y otros proyectos de interés común.</p>
+        actividades promocionales, eventos comunitarios, y otros proyectos de interés común.</p><br>
 
-      <P>Actividades y Estrategias
+      <P>Actividades y Estrategias<br>
         Marketing y Promoción Conjunta:<br> Las redes comerciales locales suelen organizar campañas de marketing y
         promoción conjuntas para atraer más clientes. Esto puede incluir eventos comunitarios, promociones estacionales,
-        y campañas publicitarias en medios locales.
+        y campañas publicitarias en medios locales.<br>
 
         Compartición de Recursos:<br> Los miembros de la red pueden compartir recursos como instalaciones, tecnología, y
         conocimiento. Por ejemplo, pueden organizar talleres de capacitación, compartir costos de publicidad, o
-        colaborar en compras al por mayor para reducir costos.
+        colaborar en compras al por mayor para reducir costos.<br>
 
         Apoyo Mutuo y Networking:<br> Las redes proporcionan una plataforma para el networking y el apoyo mutuo. Los
         empresarios pueden intercambiar experiencias, consejos y apoyo, lo que puede ser particularmente útil para los
-        negocios nuevos o en crecimiento.
+        negocios nuevos o en crecimiento.<br>
 
         Desarrollo de Infraestructura:<br> Algunas redes trabajan para mejorar la infraestructura local, como la mejora
         de la señalización, la limpieza y la seguridad de las áreas comerciales, para crear un entorno más atractivo
-        para los clientes.</P>
+        para los clientes.</P><br>
 
       <h3>Beneficios de Formar una Red Comercial Local</H3>
       <p>Aumento de la Visibilidad y Afluencia de Clientes:<br>La promoción conjunta y los eventos comunitarios pueden
-        atraer a más clientes a la zona, aumentando las ventas y la visibilidad de los negocios miembros.
+        atraer a más clientes a la zona, aumentando las ventas y la visibilidad de los negocios miembros.<br>
 
         Reducción de Costos:<br> Compartir recursos y realizar compras conjuntas puede reducir los costos operativos
-        para los negocios miembros.
+        para los negocios miembros.<br>
 
         Mejora de la Competitividad:<br> Al trabajar juntos, los negocios locales pueden competir más eficazmente contra
         grandes cadenas y comercios en línea. La colaboración puede mejorar la oferta de productos y servicios,
-        haciéndola más atractiva para los consumidores.
+        haciéndola más atractiva para los consumidores.<br>
 
         Desarrollo Económico Local:<br> Las redes comerciales locales pueden contribuir al desarrollo económico de la
-        comunidad al crear empleos, fomentar la inversión local, y mejorar la infraestructura.
+        comunidad al crear empleos, fomentar la inversión local, y mejorar la infraestructura.<br>
 
         Fomento del Sentido de Comunidad:<br> Las redes comerciales pueden fortalecer el sentido de comunidad al
         organizar eventos y actividades que involucren a los residentes locales y promuevan el comercio justo y
-        sostenible</p>
+        sostenible</p><br>
 
       <h3>Riesgos y Desafíos</h3>
       <p>Conflictos de Intereses:<br> Los diferentes negocios pueden tener intereses y objetivos divergentes, lo que
         puede llevar a conflictos y dificultades en la toma de decisiones, para ello se cuenta con una persona
-        facilitadora de organizacion comercial, fomentamos la sana competencia y organización geoestrategica.
+        facilitadora de organizacion comercial, fomentamos la sana competencia y organización geoestrategica.<br>
 
         Dependencia y Sostenibilidad:<br> Algunas redes pueden depender demasiado de ciertos miembros o fuentes de
         financiación, lo que puede poner en riesgo la sostenibilidad a largo plazo de la red, para ello se capacita a
@@ -225,7 +225,7 @@
       <div class="image">
         <img class="image__item" src="assets/img/nodos-red.png" />
         <p class="Red-comercial">
-          Red Comercial, Casa Tlazala
+          Red Comercial, Barrio Esmeralda
         </p>
       </div>
 
