--- a/red-comercial.html
+++ b/red-comercial.html
@@ -135,7 +135,7 @@
     <section>
       <h1 class="title"> Red Comercial <span class="date">Fecha: 26 de Diciembre 2023</h1>
 
-      <h3>Concepto, Funcionamiento, Beneficios y Riesgos</h3>
+      <h3>Concepto, Funcionamiento, Beneficios y Riesgos</h3><br>
 
       <p> Una red comercial local es una estructura organizada de empresas y comerciantes que colaboran en una región
         geográfica específica para promover y mejorar sus negocios. Estas redes pueden variar en tamaño y complejidad,
@@ -143,7 +143,7 @@
         servicios. En este documento, se detalla qué es una red comercial local, cómo funciona, sus beneficios, riesgos
         y se explora toda la información relevante para entender este concepto de manera exhaustiva.</p>
 
-      <h3>¿Qué es una Red Comercial Local?</h3>
+      <h3>¿Qué es una Red Comercial Local?</h3><br>
       <p>Una red comercial local es una alianza estratégica entre empresas que operan en una misma área geográfica,
         creada con el propósito de impulsar el comercio local a través de la cooperación y la sinergia entre sus
         miembros. Estas redes pueden incluir una variedad de negocios, como tiendas minoristas, restaurantes,
@@ -151,72 +151,133 @@
         aprovechar las ventajas competitivas, compartir recursos, y generar una mayor atracción de clientes a la zona.
       </p>
 
-      <h3>Funcionamiento de una Red Comercial Local</h3>
-      <p>Estructura y Organización<br>
-        Constitución y Miembros:<br> Las redes comerciales locales se constituyen mediante la asociación de varias
-        empresas y pueden formalizarse como asociaciones, cooperativas, o simplemente alianzas informales. Los miembros
-        suelen ser negocios que ven el valor en colaborar para atraer más clientes y mejorar sus operaciones.<br>
+      <h3>Funcionamiento de una Red Comercial Local</h3><br>
+      <p>Estructura y Organización<br><br>
+        Constitución y Miembros:<br> Las redes comerciales locales se constituyen mediante la Asociacion Civil de varias
+        personas físicas ó
+        empresas. Los miembros son socios que ven el valor en colaborar para crear una economía circular en beneficio de
+        la Asociación<br><br>
 
-        Gobernanza y Coordinación:<br> La red puede tener un comité directivo o una junta que se encarga de la toma de
+        Gobernanza y Coordinación:<br> La red tiene un comité directivo o una junta que se encarga de la toma de
         decisiones y la coordinación de actividades. Este órgano es responsable de la planificación estratégica, la
-        organización de eventos y campañas, y la gestión de los recursos comunes.<br>
+        organización de eventos y campañas, y la gestión de los recursos comunes. Está conformada por un hombre soltero,
+        un hombre casado, una mujer soltera y una mujer casada, para trabajar en beneficio del sector social. <br><br>
 
-        Financiación:<br> La financiación de la red comercial puede provenir de cuotas de membresía, subvenciones
-        públicas, patrocinadores privados, o una combinación de estos. Los fondos recaudados se utilizan para financiar
-        actividades promocionales, eventos comunitarios, y otros proyectos de interés común.</p><br>
+      <h3>Financiación</h3><br> 1. Inversiones para Emprendimiento de Negocios de los Miembros<br><br>
 
-      <P>Actividades y Estrategias<br>
+
+      Capital Semilla y Fondos de Inversión: <br>La A.C. puede establecer un fondo de inversión interno destinado a
+      apoyar los emprendimientos de sus miembros. Este fondo se puede nutrir de aportaciones iniciales de los miembros,
+      donaciones específicas para este propósito, o de rendimientos de otras inversiones que posea la A.C.
+      <br><br>Socios Inversionistas:<br> La asociación puede invitar a socios inversionistas externos que estén
+      interesados en apoyar proyectos de emprendimiento a cambio de una participación en las ganancias.
+      <br><br>Evaluación y Selección de Proyectos<br><br>
+
+      Comité de Evaluación:<br> Crear un comité encargado de evaluar los proyectos presentados por los miembros de la
+      A.C. Este comité debe considerar la viabilidad, el impacto social, y el retorno de inversión de cada proyecto.
+      <br><br>Plan de Negocios: <br>Los miembros que buscan financiamiento deben presentar un plan de negocios detallado
+      que incluya análisis de mercado, estrategia de marketing, proyecciones financieras, y un plan de sostenibilidad.
+      <br><br>Monitoreo y Apoyo<br><br>
+
+      Seguimiento y Acompañamiento:<br> Proveer seguimiento continuo a los proyectos financiados, ofreciendo mentoría,
+      asesoría técnica, y apoyo administrativo para asegurar su éxito.
+      <br><br>Rendición de Cuentas: <br>Los emprendedores deben rendir cuentas periódicamente sobre el uso de los fondos
+      y el progreso del negocio.
+      <br><br>2. Donativos a Cambio de Renta de Vivienda<br>
+      Captación de Propiedades<br><br>
+
+      Adquisición y Donación de Propiedades:<br>La A.C. puede recibir donaciones de inmuebles o adquirir y construir
+      propiedades con fondos propios. Estas propiedades se destinan a generar ingresos a través de los donativos por
+      renta.
+
+      Gestión de Renta:<br><br>
+
+      Administración de Propiedades: <br>La A.C. gestiona las propiedades destinadas a donativos a cambio de renta,
+      asegurándose de su mantenimiento, ocupación y cobro de los donativos.
+      <br><br>Selección de Inquilinos: <br>Implementar un proceso de selección para inquilinos que garantice el uso
+      adecuado de las propiedades y el cumplimiento de los donativos.
+      <br><br> Uso de Ingresos Generados<br><br>
+
+      Reinversión en Proyectos Sociales: <br>Los ingresos obtenidos de la renta de viviendas se pueden reinvertir en
+      proyectos sociales y comunitarios alineados con el objeto social de la A.C.
+      <br><br>Apoyo a Emprendimientos:<br> Parte de los ingresos también puede destinarse a financiar los
+      emprendimientos de los miembros, cerrando el ciclo de financiamiento dentro de la misma asociación.
+      <br><br>3. Estrategias de Transparencia y Sostenibilidad<br>
+      Transparencia Financiera<br><br>
+
+      Contabilidad Clara y Auditable:<br> Mantener registros financieros claros y auditables que muestren de manera
+      transparente el uso de los fondos y los ingresos generados.
+      <br><br>Informes Regulares: <br>Proveer informes financieros regulares a los miembros de la A.C. y a los donantes,
+      detallando el uso de los fondos y el impacto de los proyectos.
+      <br><br>Sostenibilidad<br><br>
+
+      Diversificación de Ingresos:<br>Diversificar las fuentes de ingresos para no depender exclusivamente de una sola
+      fuente, asegurando así la sostenibilidad financiera de la A.C.
+      <br><br>Planificación a Largo Plazo: <br>Desarrollar planes estratégicos a largo plazo que consideren la expansión
+      de las actividades de inversión y renta de propiedades, así como la inclusión de nuevas fuentes de
+      financiamiento..</p><br>
+
+      <P>Actividades y Estrategias<br><br>
         Marketing y Promoción Conjunta:<br> Las redes comerciales locales suelen organizar campañas de marketing y
         promoción conjuntas para atraer más clientes. Esto puede incluir eventos comunitarios, promociones estacionales,
         y campañas publicitarias en medios locales.<br>
 
-        Compartición de Recursos:<br> Los miembros de la red pueden compartir recursos como instalaciones, tecnología, y
+        <br>Compartición de Recursos:<br> Los miembros de la red pueden compartir recursos como instalaciones,
+        tecnología, y
         conocimiento. Por ejemplo, pueden organizar talleres de capacitación, compartir costos de publicidad, o
-        colaborar en compras al por mayor para reducir costos.<br>
+        colaborar en compras al por mayor para reducir costos.<br><br>
 
         Apoyo Mutuo y Networking:<br> Las redes proporcionan una plataforma para el networking y el apoyo mutuo. Los
         empresarios pueden intercambiar experiencias, consejos y apoyo, lo que puede ser particularmente útil para los
-        negocios nuevos o en crecimiento.<br>
+        negocios nuevos o en crecimiento.<br><br>
 
         Desarrollo de Infraestructura:<br> Algunas redes trabajan para mejorar la infraestructura local, como la mejora
         de la señalización, la limpieza y la seguridad de las áreas comerciales, para crear un entorno más atractivo
-        para los clientes.</P><br>
+        para los clientes.
+      </P><br><br>
 
       <h3>Beneficios de Formar una Red Comercial Local</H3>
+      <br>
       <p>Aumento de la Visibilidad y Afluencia de Clientes:<br>La promoción conjunta y los eventos comunitarios pueden
         atraer a más clientes a la zona, aumentando las ventas y la visibilidad de los negocios miembros.<br>
 
-        Reducción de Costos:<br> Compartir recursos y realizar compras conjuntas puede reducir los costos operativos
+        <br>Reducción de Costos:<br> Compartir recursos y realizar compras conjuntas puede reducir los costos operativos
         para los negocios miembros.<br>
 
-        Mejora de la Competitividad:<br> Al trabajar juntos, los negocios locales pueden competir más eficazmente contra
+        <br>Mejora de la Competitividad:<br> Al trabajar juntos, los negocios locales pueden competir más eficazmente
+        contra
         grandes cadenas y comercios en línea. La colaboración puede mejorar la oferta de productos y servicios,
         haciéndola más atractiva para los consumidores.<br>
 
-        Desarrollo Económico Local:<br> Las redes comerciales locales pueden contribuir al desarrollo económico de la
+        <br>Desarrollo Económico Local:<br> Las redes comerciales locales pueden contribuir al desarrollo económico de
+        la
         comunidad al crear empleos, fomentar la inversión local, y mejorar la infraestructura.<br>
 
-        Fomento del Sentido de Comunidad:<br> Las redes comerciales pueden fortalecer el sentido de comunidad al
+        <br>Fomento del Sentido de Comunidad:<br> Las redes comerciales pueden fortalecer el sentido de comunidad al
         organizar eventos y actividades que involucren a los residentes locales y promuevan el comercio justo y
-        sostenible</p><br>
+        sostenible
+      </p><br>
 
       <h3>Riesgos y Desafíos</h3>
+      <br>
       <p>Conflictos de Intereses:<br> Los diferentes negocios pueden tener intereses y objetivos divergentes, lo que
         puede llevar a conflictos y dificultades en la toma de decisiones, para ello se cuenta con una persona
         facilitadora de organizacion comercial, fomentamos la sana competencia y organización geoestrategica.<br>
 
-        Dependencia y Sostenibilidad:<br> Algunas redes pueden depender demasiado de ciertos miembros o fuentes de
+        <br>Dependencia y Sostenibilidad:<br> Algunas redes pueden depender demasiado de ciertos miembros o fuentes de
         financiación, lo que puede poner en riesgo la sostenibilidad a largo plazo de la red, para ello se capacita a
-        los dueños de cada negocio para ser su propio agente con la meta de lograr una amplia cartera de clientes.
+        los dueños de cada negocio para ser su propio agente con la meta de lograr una amplia cartera de clientes.<br>
 
-        Desigualdad en la Participación y Beneficios:<br> Existe el riesgo de que algunos miembros se beneficien más que
+        <br>Desigualdad en la Participación y Beneficios:<br> Existe el riesgo de que algunos miembros se beneficien más
+        que
         otros, creando desigualdades que pueden generar resentimiento y desmotivación entre los miembros, para ello se
-        planea la inversión y capacitación en la creación de nuevos emprendiemientos personales.
+        planea la inversión y capacitación en la creación de nuevos emprendiemientos personales.<br>
 
-        Burocracia y Eficiencia:<br> La coordinación de una red comercial puede volverse burocrática y lenta, afectando
+        <br>Burocracia y Eficiencia:<br> La coordinación de una red comercial puede volverse burocrática y lenta,
+        afectando
         la capacidad de respuesta rápida a los cambios del mercado, para ello se realizará monitoreo constante de los
         cambios tecnológicos, sociales, económicos y con impacto global. Se desarrollará una plataforma web con acceso
-        abierto a la comunidad para la transparecia y facil acceso a la información.
+        abierto a la comunidad para la transparecia y facil acceso a la información.<br>
 
 
 
@@ -235,17 +296,7 @@
     <section id="components">
       <h2 class="title">Servicios</h2>
       <div class="components">
-        <!-- Webflow card -->
-        <div class="components__card">
-          <img class="components__img" src="assets/img/logo-haydee.png" />
-          <div class="components__info">
-            <b>Diseño Web Personalizado</b>
-            <p class="info__text">Digitalización y desarrollo de tu negocio</p>
-            <a href="https://www.python.org/" target="_blank" rel="external" class="button button-right">Ir al
-              sitio
-              oficial</a>
-          </div>
-        </div>
+
         <!-- Abeyro card -->
         <div class="components__card">
           <img class="components__img" src="assets/img/logo-abeyro.png" />
